# nexo-backend

./: .gitignore  API_CRUD_DOC.md  Cargo.toml  GIT_STRATEGY.md  README.md  STRUCT.md  VALIDATION_DATA.md  query.sql
documentation/: API_CRUD_DOC.md  DATABASE_DOC.md
src/: main.rs
src/application/: appointment_service.rs  auth_service.rs  doctor_service.rs  hospital_service.rs  lab_result_service.rs  medical_history_service.rs  mod.rs  patient_service.rs  services_service.rs  speciality_service.rs  user_service.rs
src/domain/: appointment.rs  auth.rs  doctor.rs  hospital.rs  lab_result.rs  medical_history.rs  mod.rs  patient.rs  services.rs  speciality.rs  user.rs
src/helpers/: jwt.rs  mod.rs  utils.rs  validators.rs
src/infrastructure/: appointment_repository.rs  auth_repository.rs  doctor_repository.rs  hospital_repository.rs  lab_result.rs  medical_history_repository.rs  mod.rs  patient_repository.rs  services_repository.rs  speciality_repository.rs  user_repository.rs
src/interfaces/: appointment_controller.rs  auth_controller.rs  doctor_controller.rs  hospital_controller.rs  lab_result_controller.rs  medical_history_controller.rs  mod.rs  patient_controller.rs  services_controller.rs  speciality_controller.rs  user_controller.rs
src/routes/: appointment.rs  auth.rs  doctor.rs  hospital.rs  lab_result.rs  medical_history.rs  mod.rs  patient.rs  services.rs  speciality.rs  user.rs
